プライムのページ追加。ユーザー追加。

--- a/templates/base.html
+++ b/templates/base.html
@@ -114,10 +114,11 @@
         aria-haspopup="true" aria-expanded="false">各種ページ</a>
         <!-- ドロップダウンメニュー -->
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
+            <a class="dropdown-item" href="../prime/">プライムビデオ新作情報</a>
             <a class="dropdown-item" href="#">映画鑑賞</a>
             <a class="dropdown-item" href="#">夏の暑さ対策</a>
             <a class="dropdown-item" href="#">睡眠向上</a>
-            <a class="dropdown-item" href="#">登山</a>
+            <a class="dropdown-item" href="#">山のすすめ</a>
             <a class="dropdown-item" href="#">ランニング</a>
         </div>
 
