--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -44,7 +44,8 @@
     <!-- カルーセル部分 -->
     <div class="carousel-inner">
         <!-- First slide -->
-        <div class="carousel-item active"> <img class="d-block w-50" alt="slide" src="{% static 'img/dragon1.png' %}" width="480" height="480">
+        <div class="carousel-item active"> <img class="d-block w-50" alt="slide" src="{% static 'img/dragon1.png' %}"
+                                                width="480" height="480" onerror="this.src='{% static 'img/notImage.png' %}';">
             <!-- キャプション -->
             <div class="carousel-caption">
                 <h5>スライド見出し</h5>
@@ -52,7 +53,8 @@
             </div>
         </div>
         <!-- Second slide -->
-        <div class="carousel-item"> <img class="d-block w-50" alt="slide" src="{% static 'img/dragon2.png' %}" width="480" height="480">
+        <div class="carousel-item"> <img class="d-block w-50" alt="slide" src="{% static 'img/dragon2.png' %}"
+                                         width="480" height="480" onerror="this.src='{% static 'img/notImage.png' %}';">
             <!-- キャプション -->
             <div class="carousel-caption">
                 <h5>スライド見出し</h5>
@@ -60,7 +62,8 @@
             </div>
         </div>
         <!-- Third slide -->
-        <div class="carousel-item"> <img class="d-block w-50" alt="slide" src="{% static 'img/dragon3.png' %}" width="480" height="480">
+        <div class="carousel-item"> <img class="d-block w-50" alt="slide" src="{% static 'img/dragon3.png' %}"
+                                         width="480" height="480" onerror="this.src='{% static 'img/notImage.png' %}';">
             <!-- キャプション -->
             <div class="carousel-caption">
                 <h5>スライド見出し</h5>
@@ -91,7 +94,8 @@
 <div class="row m-1">
     {% for key, value in category_dict.items %}
     <div class="col-2 px-1"><a href="{% url 'detail' value.category1 %}">
-        <img class="card-img-top w-25" src="{% static 'img/'|add:value.category1|add:'.png' %}" alt="...">
+        <img class="card-img-top w-25" src="{% static 'img/'|add:value.category1|add:'.png' %}" alt="..."
+             onerror="this.src='{% static 'img/notImage.png' %}';">
         {{ value.category1 }}
     </a></div>
     {% endfor %}
@@ -163,7 +167,7 @@
 </div>
 
 <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
-    <img src="{% static 'img/home.jpg' %}" alt="画像の説明" id="house" />
+    <img src="{% static 'img/home.jpg' %}" alt="画像の説明" id="house" onerror="this.src='{% static 'img/notImage.png' %}';"/>
 </button>
 
 <!-- モーダルウィンドウ外枠 -->
